tests/negative/channel_zero_cap.far
fun main() -> i64 {
  ch = Channel<i64>(0)
  return 0
}
